
## process this file with automake to produce Makefile.in

EXTRA_DIST =  asparagus.exp \
              lib/feedback.tcl lib/string.tcl \
              steps/dispatcher.tcl steps/default.tcl \
	      pinedb-leakcheck.tests/leakcheck.exp

AUTOMAKE_OPTIONS = dejagnu

export DEJAGNU

DEJATOOL = pinedb
