
## process this file with automake to produce Makefile.in

EXTRA_DIST =  asparagus.exp \
              lib/feedback.tcl lib/string.tcl \
              steps/dispatcher.tcl steps/default.tcl \
	      test.sql \
	      pinedb-cli.tests/cli.exp \
	      pinedb-schema.tests/create.exp \
	      pinedb-schema.tests/drop.exp

AUTOMAKE_OPTIONS = dejagnu

export DEJAGNU

DEJATOOL = pinedb
