
## process this file with automake to produce Makefile.in

EXTRA_DIST =  asparagus.exp \
              lib/feedback.tcl lib/string.tcl \
              steps/dispatcher.tcl steps/default.tcl \
	      test.sql \
	      pinedb-cli.tests/cli.exp \
	      pinedb-schema.tests/create.exp \
	      pinedb-schema.tests/drop.exp \
	      pinedb-schema.tests/show.exp \
	      pinedb-schema.tests/use.exp \
	      pinedb-table.tests/create.exp \
	      pinedb-table.tests/drop.exp \
	      pinedb-table.tests/show.exp

AUTOMAKE_OPTIONS = dejagnu

export DEJAGNU
